feat: Expand workout template library

--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
                         <option value="nguc_tay_sau">Ngày Ngực & Tay sau</option>
                         <option value="vai">Ngày Vai</option>
                         <option value="lung_tay_truoc">Ngày Lưng & Tay trước</option>
+                        <option value="chan">Ngày Chân</option>
+                        <option value="tay">Ngày Tay</option>
+                        <option value="bung">Ngày Bụng</option>
                     </select>
                 </div>
         
