--- a/index.html
+++ b/index.html
@@ -44,19 +44,6 @@
             </header>
             <div class="container workout-form">
                 <h1>📝 Trình theo dõi tập Gym</h1>
-                
-                <div class="form-group template-selector">
-                    <label for="template-select">Gợi ý buổi tập theo mẫu</label>
-                    <select id="template-select">
-                        <option value="">-- Chọn một buổi tập có sẵn --</option>
-                        <option value="nguc_tay_sau">Ngày Ngực & Tay sau</option>
-                        <option value="vai">Ngày Vai</option>
-                        <option value="lung_tay_truoc">Ngày Lưng & Tay trước</option>
-                        <option value="chan">Ngày Chân</option>
-                        <option value="tay">Ngày Tay</option>
-                        <option value="bung">Ngày Bụng</option>
-                    </select>
-                </div>
         
                 <form id="workout-form">
                     <div class="form-group">
@@ -67,6 +54,7 @@
                     <div class="form-group">
                         <label for="muscle-group">Nhóm cơ</label>
                         <select id="muscle-group" required>
+                            <option value="">-- Chọn nhóm cơ --</option>
                             <option value="Ngực">Ngực (Chest)</option>
                             <option value="Lưng">Lưng (Back)</option>
                             <option value="Chân">Chân (Legs)</option>
@@ -78,9 +66,7 @@
 
                     <div class="form-group">
                         <label for="exercise-name">Tên bài tập</label>
-                        <input type="text" id="exercise-name" list="exercise-suggestions" placeholder="VD: Bench Press" required>
-                        <datalist id="exercise-suggestions">
-                        </datalist>
+                        <input type="text" id="exercise-name" placeholder="VD: Bench Press" required>
                     </div>
 
                     <div class="form-group">
@@ -106,7 +92,7 @@
                 </form>
 
                 <div class="chart-section">
-                    <h2>📈 Biểu đồ tiến độ</h2>
+                    <h2>📈 Biểu đồ so sánh bài tập</h2>
                     <div class="chart-controls">
                         <select id="chart-exercise">
                             <option value="">Chọn bài tập</option>
@@ -116,9 +102,37 @@
                             <option value="reps">Số lần lặp (reps)</option>
                             <option value="volume">Tổng khối lượng (kg × reps)</option>
                         </select>
+                        <select id="chart-period">
+                            <option value="7">7 ngày gần nhất</option>
+                            <option value="30">30 ngày gần nhất</option>
+                            <option value="90">90 ngày gần nhất</option>
+                            <option value="all">Tất cả</option>
+                        </select>
                     </div>
                     <div class="chart-container">
                         <canvas id="progress-chart"></canvas>
+                    </div>
+                </div>
+
+                <div class="chart-section">
+                    <h2>📊 Thống kê tổng quan</h2>
+                    <div class="stats-grid">
+                        <div class="stat-card">
+                            <h3>Tổng số buổi tập</h3>
+                            <div id="total-workouts" class="stat-value">0</div>
+                        </div>
+                        <div class="stat-card">
+                            <h3>Bài tập được tập nhiều nhất</h3>
+                            <div id="most-exercised" class="stat-value">-</div>
+                        </div>
+                        <div class="stat-card">
+                            <h3>Nhóm cơ tập nhiều nhất</h3>
+                            <div id="most-muscle-group" class="stat-value">-</div>
+                        </div>
+                        <div class="stat-card">
+                            <h3>Tổng khối lượng</h3>
+                            <div id="total-volume" class="stat-value">0 kg</div>
+                        </div>
                     </div>
                 </div>
 
@@ -131,25 +145,6 @@
                     </div>
                     <div id="rm-overview">
                         <p style="text-align: center; color: #666; font-style: italic;">Chọn một bài tập để xem ước tính 1RM</p>
-                    </div>
-                </div>
-
-                <div class="chart-section">
-                    <h2>📊 Phân tích & Gợi ý</h2>
-                    <div class="chart-controls">
-                        <select id="analysis-exercise">
-                            <option value="">Chọn bài tập</option>
-                        </select>
-                        <select id="analysis-type">
-                            <option value="trend">Phân tích xu hướng</option>
-                            <option value="recommendation">Gợi ý mức tạ/reps</option>
-                        </select>
-                    </div>
-                    <div id="analysis-content">
-                        <p style="text-align: center; color: #666; font-style: italic;">Chọn bài tập và loại phân tích để xem chi tiết</p>
-                    </div>
-                    <div class="chart-container">
-                        <canvas id="analysis-chart"></canvas>
                     </div>
                 </div>
 
@@ -201,6 +196,7 @@
                         <div class="form-group">
                             <label for="edit-muscle-group">Nhóm cơ</label>
                             <select id="edit-muscle-group" required>
+                                <option value="">-- Chọn nhóm cơ --</option>
                                 <option value="Ngực">Ngực (Chest)</option>
                                 <option value="Lưng">Lưng (Back)</option>
                                 <option value="Chân">Chân (Legs)</option>
@@ -212,9 +208,7 @@
 
                         <div class="form-group">
                             <label for="edit-exercise-name">Tên bài tập</label>
-                            <input type="text" id="edit-exercise-name" list="edit-exercise-suggestions" placeholder="VD: Bench Press" required>
-                            <datalist id="edit-exercise-suggestions">
-                            </datalist>
+                            <input type="text" id="edit-exercise-name" placeholder="VD: Bench Press" required>
                         </div>
 
                         <div class="form-group">
@@ -268,6 +262,6 @@
     <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
 
-    <script src="app.js?v=2" defer></script>
+    <script src="app.js?v=3" defer></script>
 </body>
 </html>
