Thêm hỗ trợ bài tập có hỗ trợ khối lượng (Assisted) - Loại bỏ thời gian không cần thiết cho bodyweight

--- a/index.html
+++ b/index.html
@@ -75,12 +75,13 @@
                             <option value="">-- Chọn loại bài tập --</option>
                             <option value="weight">Có tạ (Weight Training)</option>
                             <option value="bodyweight">Không tạ (Bodyweight)</option>
+                            <option value="assisted">Có hỗ trợ khối lượng (Assisted)</option>
                         </select>
                     </div>
 
                     <div class="form-group" id="equipment-group">
                         <label for="equipment">Máy tập / Dụng cụ</label>
-                        <input type="text" id="equipment" placeholder="VD: Tạ đòn, Xà đơn, Sàn...">
+                        <input type="text" id="equipment" placeholder="VD: Tạ đòn, Xà đơn, Máy hỗ trợ, Dây kháng lực...">
                     </div>
 
                     <div class="sets-section">
@@ -226,12 +227,13 @@
                                 <option value="">-- Chọn loại bài tập --</option>
                                 <option value="weight">Có tạ (Weight Training)</option>
                                 <option value="bodyweight">Không tạ (Bodyweight)</option>
+                                <option value="assisted">Có hỗ trợ khối lượng (Assisted)</option>
                             </select>
                         </div>
 
                         <div class="form-group" id="edit-equipment-group">
                             <label for="edit-equipment">Máy tập / Dụng cụ</label>
-                            <input type="text" id="edit-equipment" placeholder="VD: Tạ đòn, Xà đơn, Sàn...">
+                            <input type="text" id="edit-equipment" placeholder="VD: Tạ đòn, Xà đơn, Máy hỗ trợ, Dây kháng lực...">
                         </div>
 
                         <div class="sets-section">
