--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
         </div>
 
         <div id="app-content" class="hidden">
+            <div id="user-info" class="hidden" style="display: flex; align-items: center; gap: 15px; margin-bottom: 20px;">
+                <span id="user-display-name" style="font-weight: bold;"></span>
+                <button id="logout-btn" class="btn btn-secondary">Đăng xuất</button>
+            </div>
             <main>
                 <div class="main-grid">
                     <!-- Left Column -->
