feat: cải thiện giao diện hiển thị kết quả AI với modal đẹp, markdown to HTML

--- a/index.html
+++ b/index.html
@@ -400,6 +400,14 @@
                 </div>
             </div>
         </div>
+
+        <!-- AI Result Modal -->
+        <div id="ai-result-modal" class="ai-modal" style="display:none;">
+            <div class="ai-modal-content">
+                <button id="ai-modal-close" class="ai-modal-close">×</button>
+                <div id="ai-result-html"></div>
+            </div>
+        </div>
     </main>
 
     <!-- Auth Modal for Email/Password -->
