Fix: Ensure all placeholders for empty data exist in app-content for new users

--- a/index.html
+++ b/index.html
@@ -260,6 +260,18 @@
                     </div>
                 </div>
             </div>
+
+            <!-- Workout History Table Placeholder -->
+            <div style="display:none">
+                <table>
+                    <tbody id="history-body"></tbody>
+                </table>
+            </div>
+
+            <!-- Personal Records Placeholder -->
+            <div style="display:none">
+                <div id="pr-list"></div>
+            </div>
         </div>
     </main>
 
